// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider            = "prisma-client"
  output              = "./generated/prisma"
  importFileExtension = ""
}

datasource db {
  provider = "postgresql"
}

// ==== Users and Teams ====
model User {
  id              String               @id @default(cuid(2))
  supabaseAuthId  String?              @unique
  email           String               @unique
  firstName       String
  lastName        String
  admin           Admin?
  participant     Participant?
  roleAssignments UserRoleAssignment[]
  createdAt       DateTime             @default(now())
  updatedAt       DateTime             @updatedAt
}

model Admin {
  id        String   @id @default(cuid(2))
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId    String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

enum CautionStatus {
  PAID
  NOT_PAID
  REFUNDED
  WAIVED
}

model Participant {
  id              String        @id @default(cuid(2))
  user            User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId          String        @unique
  githubAccount   String?       @unique
  linkedInAccount String?       @unique
  school          String?
  diet            String?
  needs           String?
  caution         CautionStatus @default(NOT_PAID)
  curriculumVitae String?
  team            Team?         @relation(fields: [teamId], references: [id])
  teamId          String?
  imageAgreement  Boolean
  newsletter      Boolean       @default(false)
  submissions     Submission[]
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
}

model Team {
  id          String        @id @default(cuid(2))
  name        String        @unique
  description String
  idea        String?
  token       String        @unique @default(nanoid(16))
  members     Participant[]
  room        Room?         @relation(fields: [roomId], references: [id])
  roomId      String?
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt
}

// ==== Guests ====
enum GuestType {
  SPEAKER
  JURY
  COACH
  PHOTOGRAPHER
  GUEST
  OTHER
}

model Guest {
  id        String    @id @default(cuid(2))
  name      String
  type      GuestType
  quantity  Int       @default(1)
  company   String?
  imageUrl  String?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
}

model Sponsor {
  id          String   @id @default(cuid(2))
  name        String
  description Json
  logo        String
  url         String
  hasBadge    Boolean  @default(false)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

// ==== Submissions ====
enum SubmissionType {
  TEXT
  FILE
}

model SubmissionRequest {
  id              String         @id @default(cuid(2))
  title           String
  description     String?
  type            SubmissionType
  deadline        DateTime
  // File-related fields for FILE type submissions
  acceptedFormats String[]       @default(["pdf", "docx", "txt", "jpg", "png", "zip"])
  multiple        Boolean?
  required        Boolean        @default(false)
  teamRequest     Boolean        @default(false) // true if the submission is required at the team level (one submission per team), false if it's at the participant level (one submission per participant)
  submissions     Submission[]
  createdAt       DateTime       @default(now())
  updatedAt       DateTime       @updatedAt

  @@unique([title, deadline])
}

model Submission {
  id            String            @id @default(cuid(2))
  request       SubmissionRequest @relation(fields: [requestId], references: [id], onDelete: Cascade)
  requestId     String
  participant   Participant       @relation(fields: [participantId], references: [id])
  participantId String
  content       String? // Text content for TEXT submissions; null for FILE submissions
  skipped       Boolean           @default(false)
  files         SubmissionFile[]
  createdAt     DateTime          @default(now())
  updatedAt     DateTime          @updatedAt

  @@unique([requestId, participantId])
}

model SubmissionFile {
  id           String     @id @default(cuid(2))
  submission   Submission @relation(fields: [submissionId], references: [id], onDelete: Cascade)
  submissionId String
  bucket       String
  path         String
  originalName String
  mimeType     String
  size         Int
  sha256       String
  createdAt    DateTime   @default(now())

  @@unique([submissionId, path])
}

// ==== Program Schedule ====
model ScheduleItem {
  id          String   @id @default(cuid(2))
  title       String   @unique
  description String
  icon        String?  @default("i-lucide-calendar")
  dateString  String
  startTime   DateTime
  endTime     DateTime
  special     Boolean  @default(false)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

// ==== Room Assignments ====
model Room {
  id        String   @id @default(cuid(2))
  name      String   @unique
  sequence  Int      @unique @db.SmallInt
  teams     Team[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// ==== Roles and Permissions (RBAC) ====
model Role {
  id          String               @id @default(cuid(2))
  key         String               @unique // e.g., participant, super_admin, broadcaster, cooks, ...
  name        String
  description String?
  system      Boolean              @default(false) // true for system-defined roles that cannot be deleted
  permissions RolePermission[]
  assignments UserRoleAssignment[]
  createdAt   DateTime             @default(now())
  updatedAt   DateTime             @updatedAt
}

model Permission {
  id          String           @id @default(cuid(2))
  key         String           @unique // e.g., participant.read, participant.read.sensitive, teams.edit, ...
  group       String // e.g., participant, teams, sponsors, ... Just for better organization in the UI
  name        String
  description String?
  roles       RolePermission[]
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt
}

model RolePermission {
  role         Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  roleId       String
  permission   Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)
  permissionId String
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt

  @@id([roleId, permissionId])
  @@index([permissionId])
}

model UserRoleAssignment {
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId    String
  role      Role     @relation(fields: [roleId], references: [id], onDelete: Cascade)
  roleId    String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@id([userId, roleId])
  @@index([roleId])
}

// ==== Email Outbox ====
enum EmailOutboxStatus {
  PENDING
  PROCESSING
  SENT
  FAILED
}

model EmailOutbox {
  id          String            @id @default(cuid(2))
  type        String
  recipient   String
  subject     String
  html        String
  replyTo     String?
  status      EmailOutboxStatus @default(PENDING)
  attempts    Int               @default(0)
  lastError   String?
  scheduledAt DateTime          @default(now())
  sentAt      DateTime?
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt

  @@index([status, scheduledAt])
}

// ==== Settings and event configuration ====
// TODO: Move EventSettings to a versioned Event model when historical event pages need database-backed editions.
enum RegistrationMode {
  SCHEDULED
  OPEN
  CLOSED
}

enum SocialLinkType {
  DISCORD
  FACEBOOK
  GITHUB
  INSTAGRAM
  LINKEDIN
  X
  YOUTUBE
  WEBSITE
  OTHER
}

model WebsiteSettings {
  id                  String   @id @default("website-settings")
  contactEmail        String   @default("event@cslabs.be")
  bugReportEmail      String   @default("it@cslabs.be")
  bugReportWebhookUrl String?
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt
}

model EventSettings {
  id                     String           @id @default("event-settings")
  title                  String           @default("Le Hackathon du CSLabs")
  slogan                 String           @default("")
  logoPath               String?
  teaserEnabled          Boolean          @default(false)
  startDate              DateTime
  endDate                DateTime
  registrationsStartDate DateTime
  registrationsEndDate   DateTime
  registrationMode       RegistrationMode @default(SCHEDULED)
  cautionAmount          Int              @default(20)
  iban                   String
  bic                    String
  locationName           String           @default("Faculté d'informatique de l'Université de Namur")
  locationAddress        String           @default("Rue Grandgagnage 21, 5000 Namur, Belgique")
  createdAt              DateTime         @default(now())
  updatedAt              DateTime         @updatedAt
}

model SocialLink {
  id        String         @id @default(cuid(2))
  type      SocialLinkType @unique
  label     String
  icon      String         @default("i-lucide-link")
  url       String
  visible   Boolean        @default(true)
  sortOrder Int            @default(0) @db.SmallInt
  createdAt DateTime       @default(now())
  updatedAt DateTime       @updatedAt

  @@index([visible, sortOrder])
}
